@@ -1,7 +1,7 @@
 module Spec
   module Example
-    # Lightweight representation of an example group. This is the object
-    # that is passed to Spec::Runner::Formatter::BaseFormatter#add_example_group
+    # Lightweight proxy for an example group. This is the object that is passed
+    # to Spec::Runner::Formatter::BaseFormatter#example_group_started
     class ExampleGroupProxy
       
       def initialize(example_group) # :nodoc:
@@ -9,22 +9,22 @@ module Spec
         @nested_descriptions = example_group.nested_descriptions
         @examples            = example_group.example_proxies
         @location            = example_group.location
-        @backtrace           = example_group.backtrace
+        @backtrace           = example_group.backtrace # deprecated - see the backtrace method below
       end
       
-      # This is the docstring passed to the <tt>describe()</tt> method or any
+      # This is the description passed to the <tt>describe()</tt> method or any
       # of its aliases
       attr_reader :description
       
       # Used by Spec::Runner::Formatter::NestedTextFormatter to access the
-      # docstrings for each example group in a nested group.
+      # description of each example group in a nested group separately.
       attr_reader :nested_descriptions
       
-      # A collection of ExampleGroupProxy instances, one for each example
+      # A collection of ExampleGroupProxy objects, one for each example
       # declared in this group.
       attr_reader :examples
       
-      # The file and line number at which the represented example group
+      # The file and line number at which the proxied example group
       # was declared. This is extracted from <tt>caller</tt>, and is therefore
       # formatted as an individual line in a backtrace.
       attr_reader :location
@@ -35,12 +35,12 @@ module Spec
         @backtrace
       end
   
-      # Returns the nested_descriptions collection with any descriptions
-      # matching the submitted regexp removed.
+      # Deprecated - just use gsub on the description instead.
       def filtered_description(regexp)
+        Spec::deprecate("ExampleGroupProxy#filtered_description","gsub on ExampleGroupProxy#description")
         build_description_from(
           *nested_descriptions.collect do |description|
-            description =~ regexp ? $1 : description
+            description =~ regexp ? description.gsub($1, "") : description
           end
         )
       end
